--- a/css/styles.css
+++ b/css/styles.css
@@ -129,10 +129,11 @@ body{
         border: 0;
         border-radius: 4px;
         min-width: 169px;
+        display: block;
       }
 
       /* SECTION BENEFITS */
-      .section.benefits{
+      .section-benefits{
         padding: 120px 0;
       }
       .section-benefits-main-title{
@@ -152,7 +153,6 @@ body{
         gap: 24px;
         padding: 0;
         margin: 0;
-        
       }
       .section-benefits-list li{
         display: flex;
@@ -165,6 +165,7 @@ body{
         line-height: 1.2;
         letter-spacing: 0.4px;
         color: var(--navyblue, #2E2F42);
+        margin-bottom: 8px;
       }
       .section-benefits-text{
         line-height: 1.5;
@@ -172,7 +173,7 @@ body{
       }
 
       /* SECTION TEAM */
-      .section-team{
+      .section.team{
         background: var(--cloud, #F4F4FD);
         padding: 120px 0;
       }
@@ -222,7 +223,7 @@ body{
       }
 
       /* SECTION PORTFOLIO */
-      .section.portfolio{
+      .section-portfolio{
         padding: 120px 0 120px 0;
       }
       .section-portfolio-title{
@@ -282,12 +283,12 @@ body{
         letter-spacing: 0.54px;
         text-transform: uppercase;
         margin-bottom: 16px;
+        display: inline-block;
       }
       .footer-logo-part{
         color: var(--cloud, #F4F4FD);
       }
       .footer-text{
-        
         color: var(--cloud, #F4F4FD);
         line-height: 1.5;
         letter-spacing: 0.32px;
