--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ body{
       }
 
       /* SECTION PORTFOLIO */
-      .section.portfolio{
+      .section-portfolio{
         padding: 120px 0 120px 0;
       }
       .section-portfolio-title{
