--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@ body{
     text-decoration: none;
     }
 
+    h1,h2,h3,h4,h5,h6,p{
+      margin: 0;
+    }
     img{
     display: block;
     }
@@ -26,6 +29,7 @@ body{
       max-width: 1158px;
       margin: 0 auto;
       padding: 0 15px;
+      align-items: center;
     }
     /* header */
     header{
@@ -34,8 +38,6 @@ body{
         line-height: 1.5;
         letter-spacing: 0.32px;
         border-bottom: 1px solid var(--cornflower, #E7E9FC);
-        padding: 24px 0;
-        
     }
 
     header .container{
@@ -55,11 +57,11 @@ body{
     }
 
     .header-logo{
-        color: var(--iris, #4D5AE5);
+        color: rgba(77, 90, 229, 1);
         text-transform: uppercase;
         font-family: 'Raleway', sans-serif;
         letter-spacing: 0.54px;
-        line-height: 1.17;
+        line-height: 21px;
         font-weight: 700;
         font-size: 18px;
         margin: 0 76px 0 0;
@@ -72,6 +74,7 @@ body{
      .header-nav-link{
      color: var(--navyblue, #2E2F42);
      padding: 24px 0;
+     display: block;
     }
 
     .header-nav-link:hover , .header-nav-link:focus{
@@ -114,7 +117,7 @@ body{
         line-height: 1.07;
         letter-spacing: 1.12px;
         max-width: 496px;
-        margin: 0 0 48px 0;
+        margin: 48px auto ;
     }
 
     .section-main-button{
@@ -126,6 +129,7 @@ body{
         font-weight: 500;
         font-family: 'Roboto', sans-serif;
         padding: 16px 32px;
+        margin: 0 auto;
         border: 0;
         border-radius: 4px;
         min-width: 169px;
@@ -155,9 +159,7 @@ body{
         margin: 0;
       }
       .section-benefits-list li{
-        display: flex;
-        flex-direction: column;
-        flex-basis: calc((100% - 3 * 24px) / 4);
+        width: calc((100% - 3 * 24px) / 4);
       }
       .section-benefits-third-title{
         font-size: 20px;
@@ -214,10 +216,13 @@ body{
         margin-top: 0;
       }
       .section-team-photo-text{
+        font-family: Roboto;
+        font-size: 16px;
         font-weight: 400;
-        line-height: 1.5; 
-        letter-spacing: 0.32px;
+        line-height: 24px;
+        letter-spacing: 0.02em;
         text-align: center;
+        color: rgba(67, 68, 85, 1);
         margin-bottom: 0;
         margin-top: 0;
       }
